--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>sprc</module>
+        <module>srpc</module>
         <module>springboot-starter-srpc</module>
     </modules>
 
