--- a/srpc/pom.xml
+++ b/srpc/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>kryo</artifactId>
             <version>5.5.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+
     </dependencies>
 
 </project>
