--- a/srpc/pom.xml
+++ b/srpc/pom.xml
@@ -67,6 +67,12 @@
             <version>1.4.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.orbitz.consul</groupId>
+            <artifactId>consul-client</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
